	* updated documentation to reflect that Datasource transaction timeouts
	  are now set in milliseconds instead of seconds
	* added "AutoReadLock" and "AutoWriteLock" classes for exception-safe 
	  RWLock handling
	* updated Datasource and QoreEncoding to use std::string to store 
	  strings
	* made QoreEncoding members private
	* applied "const char*" to headers where appropriate

2007.03.09: David Nichols
	* renamed SafeLocker class to "AutoLock"
	* updated AutoLock to release the lock in the destructor only if the
	  lock is held (use the lock's status and not track it in the AutoLock
	  object in case the lock is released due to an exception, etc)
	* added AutoGate class for exception-safe gate lock handling
	* updated SmartMutex class to allow for tracking condition variables
	  waiting on it so that if it's deleted while a condition variable is
	  waiting, an exception can be thrown in the other thread(s)
	* updated RWLock class to take advantage of the new deadlock detection
	  infrastructure

2007.03.08: David Nichols
	* added RAW and LONG RAW handling to oracle driver
	* changed the Gate class to no longer accept a code to enter the gate
	* applied new deadlock detection and thread-error-catching 
	  infrastructure to the Gate class (VRmutex implementation)
	* updated documentation
	* deprecated the RMutex class in favor of the Gate class

2007.03.07: David Nichols
	* changed conversion of mysql decimal type to string from int to avoid a
	  loss of precision and to be consistent with other DBI drivers
	* implemented support for retrieving binary types in mysql
	* extensive DBI driver doc updates
	* updated Oracle driver to support TIMESTAMP fields and date/time values
	  up to millisecond resolution
	* added date_ms() function to generate a date/time value from an integer
	  offset from the qore 64-bit epoch in milliseconds

2007.03.06: David Nichols
	* updated pgsql driver to query server to determine binary data types