@@ -9,6 +9,7 @@
 	  strings
 	* made QoreEncoding members private
 	* applied "const char*" to headers where appropriate
+	* updated QoreClass; sanitized constructors and name handling
 
 2007.03.09: David Nichols
 	* renamed SafeLocker class to "AutoLock"
